--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
         "discord.js": "^13.5.0",
         "path": "^0.12.7"
     },
-    "name": "ts-dis-bot",
+    "name": "typescript-discord-bot",
     "version": "1.0.0",
     "main": "src/index.ts",
     "devDependencies": {
