--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "main": "src/index.ts",
     "devDependencies": {
         "ts-node": "^10.4.0",
-        "typescript": "^4.5.4"
+        "ts-node-dev": "^1.1.8"
     },
     "scripts": {
         "start": "ts-node-dev --respawn --transpile-only --poll .\\src\\index.ts"
